# osrs-price-api

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
db/migrations/: 20230716232656_initial.sql
migrations/: 20230716232656_initial.sql
src/: main.rs
src/controllers/: item.rs
src/models/: item.rs  mod.rs
src/services/: item.rs
src/utils/: sync.rs
