[package]
name = "osrs-price-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6" }
tower-http = "0.4.1"
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio-native-tls"] }
futures = "0.3.28"
serde_json = "1.0.103"
serde = "1.0.171"
anyhow = "1.0.72"
chrono = "0.4.26"
dotenvy = "0.15.7"
